# ToDoAppFastApi

./: pyproject.toml
TodoApp/: README.md  todos.db
TodoApp/src/todoapp/routers/: auth.py
src/todoapp/: main.py  models.py
src/todoapp/routers/: auth.py  todos.py
src/todoapp/templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  register.html
