[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Damian Czajkowski <damian.czajkowski@mirumee.com>"]
readme = "README.md"
packages = [{include = "todoapp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
jinja2 = "^3.1.2"
uvicorn = "0.20.0"
sqlalchemy = "2.0.7"
websockets = "10.4"
bcrypt = "4.0.1"
cffi = "1.15.1"
click = "8.1.3"
cryptography = "39.0.2"
ecdsa = "0.18.0"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
passlib = "1.7.4"
psycopg2-binary = "2.9.6"
pyasn1 = "0.4.8"
pycparser = "2.21"
pydantic = "1.10.5"
pymysql = "1.0.3"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pyyaml = "6.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
typing-extensions = "4.5.0"
uvloop = "0.17.0"
watchfiles = "0.18.1"
fastapi = "^0.103.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipdb = "^0.13.13"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
